# qt-demo

./: CMakeLists.txt  conanfile.txt  main.cpp
cmake/: conan_provider.cmake
resources/: resources.qrc  stylesheet.qss
